# pandas-db

./: .gitignore  README.md  connection.py  exceptions.py  pyproject.toml  setup.cfg  table.py  utils.py
data/: forestation.db
pandasdb/: __init__.py  cache.py  column.py  connection.py  exceptions.py  expression.py  indexloc.py  table.py  utils.py
src/: __init__.py  column.py  connection.py  expression.py  indexloc.py  table.py  utils.py
tests/: test_cache.py  test_column.py  test_connection.py  test_exceptions.py  test_expression.py  test_readme.py  test_table.py  test_utils.py
