[tool.poetry]
name = "pandasdb"
version = "0.1.0"
description = ""
authors = ["shner-elmo <770elmo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
mypy = "^0.991"
pympler = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
