[metadata]
name = database
version = 2.0
author = Shneor Elmaleh
description = A wrapper for SQLite3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shner-elmo/db-wrapper
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating Systime :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_packages_data = True

